--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="card-body p-4">
   
-        <button class="btn btn-primary btn-lg m-4" (click) = VerEstadisticas()> Estadísticas</button>
+        <button class="btn btn-primary btn-lg m-4" (click) = Consultar()> Consultas</button>
         <button class="btn btn-primary btn-lg m-4" (click) = Reservar()> Reservar </button>
         <button class="btn btn-primary btn-lg m-4" (click) = Planilla()> Planilla </button>
   
