--- a/front/src/app/payroll-estacionamientos/payroll-estacionamientos.component.css
+++ b/front/src/app/payroll-estacionamientos/payroll-estacionamientos.component.css
@@ -1,10 +1,18 @@
 /*Esto centra en la pantalla el contenido*/
 .container{
-    display: flex;
+    display: center;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
+}
+
+.container2{
+    display: center;
+    justify-content: center;
+    align-items: center;
+    width: 10vw;
+    height: 10vh;
 }
 
 /*Esto le da el estilo al header*/
@@ -14,7 +22,7 @@
     align-items: center;
     width: 100%;
     height: 80px;
-    background-color: rgb(3, 185, 139);
+    background-color: rgb(32, 81, 94);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
 }
