--- a/front/src/app/payroll-funcionarios/payroll-funcionarios.component.css
+++ b/front/src/app/payroll-funcionarios/payroll-funcionarios.component.css
@@ -1,10 +1,18 @@
-/*Esto centra en la pantalla el contenido*/
+/*Esto centra en la pantalla el contenido de login*/
 .container{
-    display: flex;
+    display: center;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
+}
+
+.back-Button{
+  display: center;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 /*Esto le da el estilo al header*/
@@ -14,7 +22,7 @@
     align-items: center;
     width: 100%;
     height: 80px;
-    background-color: rgb(3, 185, 139);
+    background-color: rgb(3, 82, 185);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
 }
