--- a/front/src/app/payroll-funcionarios/payroll-funcionarios.component.html
+++ b/front/src/app/payroll-funcionarios/payroll-funcionarios.component.html
@@ -5,7 +5,7 @@
 </html>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
-  <h1>Estacionamientos</h1>
+  <h1>Funcionarios</h1>
 </div>>
 
 <body>
@@ -14,17 +14,14 @@
       class="table table-striped table-bordered table-sm row-border hover" >
       <thead>
         <tr>
-          <th>Edificio</th>
           <th>Nombre</th>
-          <th>Espacios Discapacitados</th>
-          <th>Espacios Administrativos</th>
-          <th>Espacios Vehiculos</th>
-          <th>Otros Espacios</th>
-          <th>Tipo</th>
+          <th>Correo</th>
+          <th>Correo Secundario</th>
+          <th>Correo secundario favorito</th>
           <th>Teléfono</th>
-          <th>Nombre Propietario</th>
-          <th>Inicio Contrato</th>
-          <th>Fin Contrato</th>
+          <th>Id</th>
+          <th>Area</th>
+          <th>Placas</th>
         </tr>
       </thead>
       <tbody>
@@ -32,9 +29,6 @@
         <tr *ngFor="let e of data">
           <td>{{e.employee_name}}</td>
           <td>{{e.employee_salary}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
           <td>{{e.employee_age}}</td>
           <td>{{e.employee_age}}</td>
           <td>{{e.employee_age}}</td>
