--- a/front/src/app/payroll/payroll.component.html
+++ b/front/src/app/payroll/payroll.component.html
@@ -1,1 +1,25 @@
-<p>payroll works!</p>
+<router-outlet></router-outlet>
+<!DOCTYPE html>
+<html>
+
+</html>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="header">
+    <h1>Planilla</h1>
+</div>>
+<div class="container">
+<div class="card text-center">
+    <div class="card-header">
+        <b>Seleccione una opción</b>
+    </div>
+    <div class="card-body p-4">
+        <button class="btn btn-primary btn-lg m-4" (click)=Estacionamiento()> Estacionamientos</button>
+        <button class="btn btn-primary btn-lg m-4" (click)=Funcionario()> Funcionarios </button>
+    </div>
+</div>
+</div>
+<router-outlet></router-outlet>
+
+<div class="container2">
+    <button class="btn btn-primary btn-lg m-4" (click)=Volver()> Volver</button>
+</div>
