--- a/front/src/app/reserve/reserve.component.html
+++ b/front/src/app/reserve/reserve.component.html
@@ -1,1 +1,32 @@
-<p>reserve works!</p>
+<router-outlet></router-outlet>
+<!DOCTYPE html>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="header">
+    <h1>Reserva ParTec</h1> 
+</div>>
+<div class= "container">
+    <div class="card text-center">
+      <div class="card-header">
+        <b>Reserva</b> 
+      </div>
+      <router-outlet></router-outlet>
+      <div class="card-body p-4">
+  
+        <label style="float: left;">Nombre Completo</label>
+        <input class="form-control m-2" type="text" placeholder="Ingrese el nombre del estacionamiento"[(ngModel)]="reserva.Edificio">
+  
+        <label style="float: left;">Ubicacion</label>
+        <input class="form-control m-2" type="email" placeholder="Ingrese la ubicacion"[(ngModel)]="reserva.Correo">
+
+        <label style="float: left;">Fecha de Reserva</label>
+        <input class="form-control m-2" type="datetime-local" placeholder="Ingrese su fecha de registro"[(ngModel)]="reserva.FechaRegistro">
+
+        
+        <button class="btn btn-primary btn-block m-4" > Reservar </button>
+
+        <label><a [routerLink]="['/home']">Volver</a></label>
+      </div>
+    </div>
+  
+    <router-outlet></router-outlet>
+  </div>
