--- a/front/src/app/stats-funcionarios/stats-funcionarios.component.html
+++ b/front/src/app/stats-funcionarios/stats-funcionarios.component.html
@@ -1,29 +1,42 @@
 <router-outlet></router-outlet>
 <!DOCTYPE html>
 <html>
-<body>
-</body>
+
 </html>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
-    <h1>Bienvenido a ParTec</h1> 
+  <h1>Funcionarios</h1>
 </div>>
-<div class="container mt - 5">
-<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" 
-class="table table-striped table-bordered row-border hover">
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>ID</th>
-        <th>Edad</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let e of data" >
-        <td>{{e.employee_name}}</td>
-        <td>{{e.employee_salary}}</td>
-        <td>{{e.employee_age}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+
+<body>
+  <div class="container mt - 2">
+    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
+      class="table table-striped table-bordered table-sm row-border hover" >
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Correo</th>
+          <th>Correo Secundario</th>
+          <th>Correo secundario favorito</th>
+          <th>Teléfono</th>
+          <th>Id</th>
+          <th>Area</th>
+          <th>Placas</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
+        <tr *ngFor="let e of data">
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_salary}}</td>
+          <td>{{e.employee_age}}</td>
+          <td>{{e.employee_age}}</td>
+          <td>{{e.employee_age}}</td>
+          <td>{{e.employee_age}}</td>
+          <td>{{e.employee_age}}</td>
+          <td>{{e.employee_age}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
