--- a/front/src/app/payroll-funcionarios/payroll-funcionarios.component.html
+++ b/front/src/app/payroll-funcionarios/payroll-funcionarios.component.html
@@ -9,9 +9,12 @@
 </div>>
 
 <body>
+  <div class="container2 mt - 2">
+    <button class="btn btn-success btn-lg m-5" (click)=Agregar()> Agregar Estacionamiento </button>
+  </div>
   <div class="container mt - 2">
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
-      class="table table-striped table-bordered table-sm row-border hover" >
+      class="table table-striped table-bordered table-sm row-border hover">
       <thead>
         <tr>
           <th>Nombre</th>
@@ -22,6 +25,8 @@
           <th>Id</th>
           <th>Area</th>
           <th>Placas</th>
+          <th>Editar</th>
+          <th>Eliminar</th>
         </tr>
       </thead>
       <tbody>
@@ -35,6 +40,8 @@
           <td>{{e.employee_age}}</td>
           <td>{{e.employee_age}}</td>
           <td>{{e.employee_age}}</td>
+          <td><button class="btn btn-warning btn-sm m-4" (click)=Editar()> Editar </button></td>
+          <td><button class="btn btn-danger btn-sm m-4" (click)=Eliminar()> Eliminar </button></td>
         </tr>
       </tbody>
     </table>
