--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -15,9 +15,10 @@
       </div>
       <div class="card-body p-4">
   
-        <button class="btn btn-primary btn-lg m-4" *ngIf="this.isButtonVisible" (click) = Consultar()> Consultas</button>
+        <button class="btn btn-primary btn-lg m-4" *ngIf="this.isAdmin" (click) = Consultar()> Consultas</button>
         <button class="btn btn-primary btn-lg m-4" (click) = Reservar()> Reservar </button>
-        <button class="btn btn-primary btn-lg m-4" *ngIf="this.isButtonVisible" (click) = Planilla()> Planilla </button>
+        <button class="btn btn-primary btn-lg m-4" *ngIf="this.isAdmin" (click) = Planilla()> Planilla </button>
+        <button class="btn btn-primary btn-lg m-4" (click) = Perfil()> Perfil </button>
   
       </div>
     </div>
