--- a/front/src/app/stats-estacionamientos/stats-estacionamientos.component.html
+++ b/front/src/app/stats-estacionamientos/stats-estacionamientos.component.html
@@ -30,17 +30,17 @@
       <tbody>
         <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
         <tr *ngFor="let e of data">
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_salary}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
+          <td>{{e.Edificio}}</td>
+          <td>{{e.Nombre}}</td>
+          <td>{{e.Discapacitados}}</td>
+          <td>{{e.Administrativos}}</td>
+          <td>{{e.Vehiculos}}</td>
+          <td>{{e.Otros}}</td>
+          <td>{{e.Tipo}}</td>
+          <td>{{e.Numero}}</td>
+          <td>{{e.Propietario}}</td>
+          <td>{{e.InicioContrato}}</td>
+          <td>{{e.FinContrato}}</td>
         </tr>
       </tbody>
     </table>
