--- a/front/src/app/payroll-estacionamientos/payroll-estacionamientos.component.html
+++ b/front/src/app/payroll-estacionamientos/payroll-estacionamientos.component.html
@@ -35,17 +35,17 @@
             <tbody>
                 <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
                 <tr *ngFor="let e of data">
-                    <td>{{e.employee_name}}</td>
-                    <td>{{e.employee_salary}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
-                    <td>{{e.employee_age}}</td>
+                    <td>{{e.Edificio}}</td>
+                    <td>{{e.Nombre}}</td>
+                    <td>{{e.Discapacitados}}</td>
+                    <td>{{e.Administrativos}}</td>
+                    <td>{{e.Vehiculos}}</td>
+                    <td>{{e.Otros}}</td>
+                    <td>{{e.Tipo}}</td>
+                    <td>{{e.Numero}}</td>
+                    <td>{{e.Propietario}}</td>
+                    <td>{{e.InicioContrato}}</td>
+                    <td>{{e.FinContrato}}</td>
                     <td><button class="btn btn-warning btn-sm m-4" (click)=Editar()> Editar </button></td>
                     <td><button class="btn btn-danger btn-sm m-4" (click)=Eliminar()> Eliminar </button></td>
                 </tr>
