--- a/front/src/app/payroll-estacionamientos/payroll-estacionamientos.component.html
+++ b/front/src/app/payroll-estacionamientos/payroll-estacionamientos.component.html
@@ -47,7 +47,7 @@
                     <td>{{e.InicioContrato}}</td>
                     <td>{{e.FinContrato}}</td>
                     <td><button class="btn btn-warning btn-sm m-4" (click)=Editar()> Editar </button></td>
-                    <td><button class="btn btn-danger btn-sm m-4" (click)=Eliminar()> Eliminar </button></td>
+                    <td><button class="btn btn-danger btn-sm m-4" (click)=Eliminar(e.id)> Eliminar </button></td>
                 </tr>
             </tbody>
         </table>
