--- a/front/src/app/stats-funcionarios/stats-funcionarios.component.html
+++ b/front/src/app/stats-funcionarios/stats-funcionarios.component.html
@@ -1,14 +1,12 @@
 <router-outlet></router-outlet>
 <!DOCTYPE html>
 <html>
-
 </html>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
   <h1>Funcionarios</h1>
 </div>>
 
-<body>
   <div class="container mt - 2">
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
       class="table table-striped table-bordered table-sm row-border hover" >
@@ -28,15 +26,14 @@
         <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
         <tr *ngFor="let e of data">
           <td>{{e.employee_name}}</td>
-          <td>{{e.employee_salary}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
-          <td>{{e.employee_age}}</td>
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_name}}</td>
+          <td>{{e.employee_name}}</td>
         </tr>
       </tbody>
     </table>
   </div>
-</body>
