Update some views

--- a/front/src/app/payroll-crear-funcionario/payroll-crear-funcionario.component.html
+++ b/front/src/app/payroll-crear-funcionario/payroll-crear-funcionario.component.html
@@ -19,10 +19,10 @@
         <input class="form-control m-2" type="text" placeholder="Ingrese rol del funcionario"[(ngModel)]="funcionario.role"  required>
 
         <label style="float: left;">Nombre del area</label>
-        <input class="form-control m-2" type="text" placeholder="Ingrese el nombre del area"[(ngModel)]="funcionario.areaName" required>
+        <input class="form-control m-2" type="text" placeholder="Ingrese el nombre del area"[(ngModel)]="funcionario.area.name" required>
 
         <label style="float: left;">Codigo del area</label>
-        <input class="form-control m-2" type="text" placeholder="Ingrese el codigo del area"[(ngModel)]="funcionario.areaCode" required>
+        <input class="form-control m-2" type="text" placeholder="Ingrese el codigo del area"[(ngModel)]="funcionario.area.code" required>
 
         <label style="float: left;">Teléfono</label>
         <input class="form-control m-2" type="number" placeholder="Ingrese el teléfono del fncionario"[(ngModel)]="funcionario.phone" required>
