--- a/front/src/app/stats-funcionarios/stats-funcionarios.component.html
+++ b/front/src/app/stats-funcionarios/stats-funcionarios.component.html
@@ -5,35 +5,37 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
   <h1>Funcionarios</h1>
-</div>>
+</div>
 
-  <div class="container mt - 2">
-    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
-      class="table table-striped table-bordered table-sm row-border hover" >
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Correo</th>
-          <th>Correo Secundario</th>
-          <th>Correo secundario favorito</th>
-          <th>Teléfono</th>
-          <th>Id</th>
-          <th>Area</th>
-          <th>Placas</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
-        <tr *ngFor="let e of data">
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-          <td>{{e.employee_name}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<div class="container mt - 2">
+  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
+    class="table table-striped table-bordered table-sm row-border hover">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Correo</th>
+        <th>Correo Secundario</th>
+        <th>Teléfono</th>
+        <th>Id</th>
+        <th>Area</th>
+        <th>Placas</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
+      <tr *ngFor="let e of data">
+        <td>{{e.name}} </td>
+        <td>{{e.email}}</td>
+        <td>{{e.secondEmail}}</td>
+        <td>{{e.phone}}</td>
+        <td>{{e.idNumber}}</td>
+        <td> <strong>Cod: </strong>  {{e.area.code}} <br>
+          <strong>Nombre: </strong>  {{e.area.name}} </td>
+        <td><tr *ngFor="let p of e.plates">
+            {{p}}
+          </tr>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
