--- a/front/src/app/payroll-funcionarios/payroll-funcionarios.component.html
+++ b/front/src/app/payroll-funcionarios/payroll-funcionarios.component.html
@@ -42,7 +42,7 @@
               {{p}}
             </tr>
           </td>
-          <td><button class="btn btn-warning btn-sm m-4" (click)="Editar(e.id)"> Editar </button></td>
+          <td><button class="btn btn-warning btn-sm m-4" (click)="Editar(e)"> Editar </button></td>
           <td><button class="btn btn-danger btn-sm m-4" (click)="Eliminar(e.id)"> Eliminar </button></td>
         </tr>
       </tbody>
