--- a/front/src/app/stats-estacionamientos/stats-estacionamientos.component.html
+++ b/front/src/app/stats-estacionamientos/stats-estacionamientos.component.html
@@ -20,6 +20,7 @@
           <th>Espacios Administrativos</th>
           <th>Espacios Vehiculos</th>
           <th>Otros Espacios</th>
+          <th>Horario Estacionamiento</th>
           <th>Tipo</th>
           <th>Teléfono</th>
           <th>Nombre Propietario</th>
@@ -30,17 +31,19 @@
       <tbody>
         <!--Aqui van los datos que van dentro de la columna de arriba, en el orden de arriba-->
         <tr *ngFor="let e of data">
-          <td>{{e.Edificio}}</td>
-          <td>{{e.Nombre}}</td>
-          <td>{{e.Discapacitados}}</td>
-          <td>{{e.Administrativos}}</td>
-          <td>{{e.Vehiculos}}</td>
-          <td>{{e.Otros}}</td>
-          <td>{{e.Tipo}}</td>
-          <td>{{e.Numero}}</td>
-          <td>{{e.Propietario}}</td>
-          <td>{{e.InicioContrato}}</td>
-          <td>{{e.FinContrato}}</td>
+          <td>{{e.building}}</td>
+          <td>{{e.name}}</td>
+          <td>{{e.disabledSpaces}}</td>
+          <td>{{e.administrativeSpaces}}</td>
+          <td>{{e.vehiclesSpaces}}</td>
+          <td>{{e.othersSpaces}}</td>
+          <td> <strong>Fin: </strong>  {{e.schedule.startHour}} <br>
+            <strong>Fin: </strong>  {{e.schedule.endHour }} </td>
+          <td>{{e.type}}</td>
+          <td>{{e.phone}}</td>
+          <td>{{e.ownerName}}</td>
+          <td>{{e.startContract}}</td>
+          <td>{{e.endContract}}</td>
         </tr>
       </tbody>
     </table>
