Fix parkinglots register

--- a/front/src/app/stats-estacionamientos/stats-estacionamientos.component.html
+++ b/front/src/app/stats-estacionamientos/stats-estacionamientos.component.html
@@ -6,7 +6,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
   <h1>Estacionamientos</h1>
-</div>>
+</div>
 
 <body>
   <div class="container mt - 2">
@@ -37,7 +37,7 @@
           <td>{{e.administrativeSpaces}}</td>
           <td>{{e.vehiclesSpaces}}</td>
           <td>{{e.othersSpaces}}</td>
-          <td> <strong>Fin: </strong>  {{e.schedule.startHour}} <br>
+          <td> <strong>Inicio: </strong>  {{e.schedule.startHour}} <br>
             <strong>Fin: </strong>  {{e.schedule.endHour }} </td>
           <td>{{e.type}}</td>
           <td>{{e.phone}}</td>
