--- a/front/src/app/stats-franja/stats-franja.component.html
+++ b/front/src/app/stats-franja/stats-franja.component.html
@@ -9,7 +9,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
     <h1>Franja Horaria</h1>
-</div>>
+</div>
     <div id="graph" class="grid-container">
         <div id="day">lunes</div>
         <div id="day">martes</div>
