--- a/front/src/app/reserve/reserve.component.html
+++ b/front/src/app/reserve/reserve.component.html
@@ -3,7 +3,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="header">
     <h1>Reserva ParTec</h1> 
-</div>>
+</div>
 <div class= "container">
     <div class="card text-center">
       <div class="card-header">
