--- a/front/src/app/payroll-crear-funcionario/payroll-crear-funcionario.component.html
+++ b/front/src/app/payroll-crear-funcionario/payroll-crear-funcionario.component.html
@@ -18,7 +18,7 @@
   
         <label style="float: left;">Rol</label>
         <input class="form-control m-2" type="text" placeholder="Ingrese rol del funcionario"
-        (ngModel)]="user.role"  required>
+        [(ngModel)]="user.role"  required>
 
         <label style="float: left;">Nombre del area</label>
         <input class="form-control m-2" type="text" placeholder="Ingrese el nombre del area"
